--- a/Supplement_sales_prediction.ipynb
+++ b/Supplement_sales_prediction.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Supplement sales prediction.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMiDNaBMj9WrSpaOIwT0Zi7",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Tanaya0211/Supplement-Sales-Prediction/blob/main/Supplement_sales_prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -2441,6 +2453,17 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E6PMqSF0DdLZ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
